[package]
name = "fast_woothee"
version = "1.6.0"
authors = ["Ian Ker-Seymer <i.kerseymer@gmail.com>"]
repository = "https://github.com/ianks/fast_woothee"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
woothee = { git = "https://github.com/woothee/woothee-rust" }
rutie = { version = "0.7.0", features = ["no-link"] }

[patch.crates-io]
rutie = { git = "https://github.com/danielpclark/rutie", branch = "master" }

[package.metadata.thermite]
github_releases = true
