[package]
name = "fast_woothee"
version = "1.6.0"
authors = ["Ian Ker-Seymer <i.kerseymer@gmail.com>"]
repository = "https://github.com/ianks/fast_woothee"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
woothee = "0.11.0"
rutie = { git = "https://github.com/danielpclark/rutie", feature = ["no-link"] }

[package.metadata.thermite]
github_releases = true
