[package]
name = "fast_woothee"
version = "1.6.3-beta.3"
authors = ["Ian Ker-Seymer <i.kerseymer@gmail.com>"]
repository = "https://github.com/ianks/fast_woothee"
publish = false

[lib]
crate-type = ["dylib"]

[dependencies]
woothee = { git = "https://github.com/woothee/woothee-rust" }
rutie = { git = "https://github.com/danielpclark/rutie", feature = ["no-link"] }

[package.metadata.thermite]
github_releases = true
